feat: Added transaction list

--- a/public/index.html
+++ b/public/index.html
@@ -146,9 +146,12 @@
         };
 
         $scope.members = $firebaseArray(membersRef);
-
         var membersObject = $firebaseObject(membersRef);
         membersObject.$bindTo($scope,'members');
+
+        $scope.transactions = $firebaseArray(tnxRef);
+        var tnxObject = $firebaseObject(tnxRef);
+        tnxObject.$bindTo($scope,'transactions');
 
       });
 
