--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     var sji98 = angular.module('sji98',[
         'ngRoute',
         'ngMaterial',
-        'FirebaseMembers'
+        'firebase'
       ]);
 
     sji98.run(function (){
@@ -77,80 +77,78 @@
             });
       });
 
-    angular.module('FirebaseMembers',[
-        'firebase'
-      ])
-      .controller('Members',function($scope,$location,$firebaseArray,$firebaseObject) {
-        var membersRef = firebase.database().ref().child('members');
+      sji98
+        .controller('Members',function($scope,$location,$firebaseArray,$firebaseObject) {
+          var membersRef = firebase.database().ref().child('members');
 
-        $scope.submit = function() {
-          var members = $firebaseArray(membersRef);
+          $scope.submit = function() {
+            var members = $firebaseArray(membersRef);
 
-          members.$add({
-            name: this.user.name,
-            email: this.user.email,
-            birthdate: this.user.birthdate.getTime(),
-            balance: this.user.balance
-          }).then(function(ref) {
-            // Add key to record
-            var memberKey = ref.key;
-            var member = members.$getRecord(memberKey);
-            member.key = memberKey;
-            members.$save(member).then(function(ref) {
-              console.log("Sucessfully saved member " + ref.key);
+            members.$add({
+              name: this.user.name,
+              email: this.user.email,
+              birthdate: this.user.birthdate.getTime(),
+              balance: this.user.balance
+            }).then(function(ref) {
+              // Add key to record
+              var memberKey = ref.key;
+              var member = members.$getRecord(memberKey);
+              member.key = memberKey;
+              members.$save(member).then(function(ref) {
+                console.log("Sucessfully saved member " + ref.key);
+              });
+              members.$indexFor(memberKey);
+            }).catch(function(errors) {
+              console.log('Errors:' + errors);
             });
-            members.$indexFor(memberKey);
-          }).catch(function(errors) {
-            console.log('Errors:' + errors);
-          });
-        };
+          };
 
-        $scope.redirectTo = function() {
-          $location.path('/members/'+this.member.key);
-        };
+          $scope.redirectTo = function() {
+            $location.path('/members/'+this.member.key);
+          };
 
-        $scope.members = $firebaseArray(membersRef);
+          $scope.members = $firebaseArray(membersRef);
 
-        var membersObject = $firebaseObject(membersRef);
-        membersObject.$bindTo($scope,'members');
-      })
-      .controller('Member',function($scope,$location,$firebaseArray,$firebaseObject) {
-        var membersRef = firebase.database().ref().child('members');
-        var tnxRef = firebase.database().ref().child('transactions');
-        var memberKey = $location.path().split('/')[2].toString();
-        var members = $firebaseArray(membersRef);
-        var transactions = $firebaseArray(tnxRef);
-
-        members.$loaded().then(function(ref) {
-          $scope.member = members.$getRecord(memberKey);
-          var memberIndex = members.$indexFor(memberKey);
-        });
-
-        $scope.addPayment = function() {
+          var membersObject = $firebaseObject(membersRef);
+          membersObject.$bindTo($scope,'members');
+        })
+        .controller('Member',function($scope,$location,$firebaseArray,$firebaseObject) {
+          var membersRef = firebase.database().ref().child('members');
+          var tnxRef = firebase.database().ref().child('transactions');
+          var memberKey = $location.path().split('/')[2].toString();
+          var members = $firebaseArray(membersRef);
           var transactions = $firebaseArray(tnxRef);
 
-          transactions.$add({
-            memberId: $scope.member.$id,
-            date: this.transaction.date.getTime(),
-            amount: this.transaction.amount,
-          }).then(function(ref) {
-            // Add key to record
-            var tnxKey = ref.key;
-            var tnx = transactions.$getRecord(tnxKey);
-            tnx.$save(tnx).then(function(ref) {
-              console.log("Sucessfully saved transaction " + ref.key);
-            });
-            tnx.$indexFor(tnxKey);
-          }).catch(function(errors) {
-            console.log('Errors:' + errors);
+          members.$loaded().then(function(ref) {
+            $scope.member = members.$getRecord(memberKey);
+            var memberIndex = members.$indexFor(memberKey);
           });
-        };
 
-        $scope.transactions = $firebaseArray(tnxRef);
-        var tnxObject = $firebaseObject(tnxRef);
-        tnxObject.$bindTo($scope,'transactions');
+          $scope.addPayment = function() {
+            var transactions = $firebaseArray(tnxRef);
 
-      });
+            transactions.$add({
+              memberId: $scope.member.$id,
+              date: this.transaction.date.getTime(),
+              amount: this.transaction.amount,
+            }).then(function(ref) {
+              // Add key to record
+              var tnxKey = ref.key;
+              var tnx = transactions.$getRecord(tnxKey);
+              tnx.$save(tnx).then(function(ref) {
+                console.log("Sucessfully saved transaction " + ref.key);
+              });
+              tnx.$indexFor(tnxKey);
+            }).catch(function(errors) {
+              console.log('Errors:' + errors);
+            });
+          };
+
+          $scope.transactions = $firebaseArray(tnxRef);
+          var tnxObject = $firebaseObject(tnxRef);
+          tnxObject.$bindTo($scope,'transactions');
+
+        });
 
     </script>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.3/angular-material.min.css" />
