--- a/public/index.html
+++ b/public/index.html
@@ -150,6 +150,20 @@
 
         });
 
+      sji98
+        .factory('MembersService',function() {
+          return $firebaseArray.$extend({
+            addMember: function() {
+            },
+            getAllMembers: function() {
+            },
+            getMember: function() {
+            },
+            searchMember: function() {
+            }
+          })
+        });
+
     </script>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.3/angular-material.min.css" />
     <base href="/">
