--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
               templateUrl: 'templates/login.html'
             })
             .when('/members/add',{
-              controller: 'MembersAdd',
+              controller: 'MemberAdd',
               templateUrl: 'templates/members-add.html'
             })
             .when('/members/:id',{
